force-app/main/default/objects/Product2/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Indexed Id that can reference into an external system permanently or can be used to update or upsert records during migration. Designed case sensitive as it is not predictable, how the external system works. The external system can also be another salesforce org</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>