force-app/main/default/objects/Product2/listViews/AllProductsDE.listView-meta.xml
<ListView>
    <fullName>AllProductsDE</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <label>Alle Produkte</label>
    <sharedTo>
        <group>LanguageProfileGerman</group>
    </sharedTo>
</ListView>