force-app/main/default/objects/Product2/listViews/AllProductsEN.listView-meta.xml
<ListView>
    <fullName>AllProductsEN</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
    <sharedTo>
        <group>LanguageProfileEnglish</group>
    </sharedTo>
</ListView>